# claude-code-sessions-manager

./: .gitignore  CLAUDE.md  LICENSE  PLAN-MVP.md  README.md  com.claude-sessions.scheduler.plist.template  install-scheduler.sh  main.py  pyproject.toml  reinstall.sh  response.json  run_tests.py  uninstall-scheduler.sh
src/claude_code_session_manager/: __main__.py  main.py
src/claude_code_session_manager/config/: settings.py
src/claude_code_session_manager/domain/: exceptions.py
src/claude_code_session_manager/infrastructure/: claude_client.py  storage.py
src/claude_code_session_manager/services/: session_manager.py
src/claude_code_session_manager/utils/: formatters.py
src/config/: settings.py
src/domain/: models.py
src/infrastructure/: claude_client.py  storage.py
src/services/: session_manager.py
src/utils/: formatters.py
tests/config/: test_settings.py
tests/domain/: test_exceptions.py  test_models.py
tests/infrastructure/: test_claude_client.py  test_storage.py
tests/services/: test_session_manager.py
tests/utils/: test_helpers.py
