[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-code-session-manager"
version = "0.1.0"
description = "Session manager pentru Claude Pro (ferestre de 5 ore)"
readme = "README.md"
requires-python = ">=3.10"

dependencies = ["rich"]

[project.scripts]
claude-sessions = "claude_code_session_manager.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_code_session_manager"]
